Add basic structure to contain cards

--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
     <script src="./script.js" defer></script>
   </head>
   <body>
-    
+    <main>
+      <h2 class="main-title">The Library</h2>
+      <div class="card-container">
+        <div class="card">
+          <h2 class="book-title">The Hobbit</h2>
+          <p class="author">J.R</p>
+          <p class="pages">200</p>
+          <p class="read">yes</p>
+        </div>
+        <div class="card">
+          <h2 class="book-title">The Hobbit</h2>
+          <p class="author">J.R</p>
+          <p class="pages">200</p>
+          <p class="read">yes</p>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
