--- a/index.html
+++ b/index.html
@@ -11,6 +11,30 @@
   <body>
     <main>
       <h2 class="main-title">The Library</h2>
+
+      <button type="button" class="btn show-options">NEW BOOK</button>
+      <!-- Form -->
+      <div class="show-form" id="myForm">
+        <form action="" class="form-container">
+          <h2>Add New Book</h1>
+
+          <label for="title">Title: </label>
+          <input type="text" name="title" required>
+          <label for="author">Author: </label>
+          <input type="text" name="author" required>
+          <label for="pages">Pages: </label>
+          <input type="text" name="pages" required>
+          <label for="read">Read: </label>
+          <input type="text" name="read" required>
+      
+          <div class="btn-container">
+            <button type="submit" class="btn">Add Book</button>
+            <button type="button" class="btn hide-options">Close</button>
+          </div>
+        </form>
+      </div>
+
+      <!-- Books -->
       <div class="card-container">
         <div class="card">
           <h2 class="book-title">The Hobbit</h2>
