--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
           <h2>Add New Book</h1>
 
           <label for="title">Title: </label>
-          <input type="text" name="title" required>
+          <input type="text" name="title" id="title" required>
           <label for="author">Author: </label>
-          <input type="text" name="author" required>
+          <input type="text" name="author" id="author" required>
           <label for="pages">Pages: </label>
-          <input type="text" name="pages" required>
+          <input type="text" name="pages" id="pages" required>
           <label for="read">Read: </label>
-          <input type="text" name="read" required>
+          <input type="text" name="read" id="read" required>
       
           <div class="btn-container">
-            <button type="submit" class="btn">Add Book</button>
+            <button type="submit" class="btn add-book">Add Book</button>
             <button type="button" class="btn hide-options">Close</button>
           </div>
         </form>
