Change colors, Add form animations

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
       <h2 class="main-title">The Library</h2>
 
-      <button type="button" class="btn show-options">NEW BOOK</button>
+      <button type="button" class="btn show-options">+ ADD BOOK</button>
       <!-- Form -->
       <div class="show-form" id="myForm">
         <form action="" class="form-container">
