Modify toggle btns, add transition to form btns

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <button type="button" class="btn show-options">+ ADD BOOK</button>
       <!-- Form -->
       <div class="show-form" id="myForm">
-        <form action="" class="form-container">
+        <form action="#" class="form-container">
           <h2>Add New Book</h1>
 
           <label for="title">Title: </label>
@@ -28,7 +28,7 @@
           
           <p for="read">Read it?</p>
           <div class="radio-btn">
-            <input type="radio" id="yes" name="read" value="yes">
+            <input type="radio" id="yes" name="read" value="yes" required>
             <label for="yes">Yes!</label>
             <input type="radio" id="no" name="read" value="no">
             <label for="no">No!</label>
