Add constraint validation on empty form

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <button type="button" class="btn show-options">+ ADD BOOK</button>
       <!-- Form -->
       <div class="show-form" id="myForm">
-        <form action="#" class="form-container">
+        <form action="#" method="post" class="form-container">
           <h2>Add New Book</h1>
 
           <label for="title">Title: </label>
